# plasma-sdk

./: .git-blame-ignore-revs  .gitignore  .kde-ci.yml  .reviewboardrc  CHANGELOG  CMakeLists.txt  COPYING  INSTALL  Messages.sh  PlasMateui.rc  README  editorwidget.cpp  editorwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  man-plasmaengineexplorer.1.docbook  man-plasmoidviewer.1.docbook  newproject.cpp  newproject.h  newproject.ui  packagemodel.cpp  packagemodel.h  plasma-studio.pro  plasmate.desktop  plasmate.knsrc  plasmateui.rc  savesystem.cpp  savesystem.h  sidebar.cpp  sidebar.h  sidebardelegate.cpp  sidebardelegate.h  sidebaritem.cpp  sidebarlistwidget.cpp  sidebarlistwidget.h  sidebarprivatestorage.cpp  sidebarprivatestorage.h  sidebartablewidget.cpp  (+4 more)
cuttlefish/: CMakeLists.txt  Messages.sh  cuttlefish.desktop  org.kde.cuttlefish.appdata.xml  org.kde.cuttlefish.desktop  org.kde.plasma.cuttlefish.appdata.xml  org.kde.plasma.cuttlefish.desktop
cuttlefish/autotests/: CMakeLists.txt  iconmodeltest.cpp
cuttlefish/package/: metadata.desktop
cuttlefish/src/: CMakeLists.txt  colorschemes.cpp  colorschemes.h  iconmodel.cpp  iconmodel.h  main.cpp  qml.qrc  sortfiltermodel.cpp  sortfiltermodel.h  view.cpp  view.h
editors/kconfigxt/: CMakeLists.txt  kconfigxteditor.cpp  kconfigxteditor.h  kconfigxteditor.ui  kconfigxtparser.cpp  kconfigxtparser.h  kconfigxtreader.cpp  kconfigxtreader.h  kconfigxtwriter.cpp  kconfigxtwriter.h
editors/metadata/: CMakeLists.txt  metadata.ui  metadataeditor.cpp  metadataeditor.h
editors/svg/: CMakeLists.txt  svgviewer.cpp  svgviewer.h
editors/text/: CMakeLists.txt  texteditor.cpp  texteditor.h
engineexplorer/: CMakeLists.txt  Messages.sh  engineexplorer.cpp  engineexplorer.h  engineexplorer.ui  ktreeviewsearchline.cpp  ktreeviewsearchline.h  main.cpp  man-plasmaengineexplorer.1.docbook  modelviewer.cpp  modelviewer.h  org.kde.plasmaengineexplorer.appdata.xml  org.kde.plasmaengineexplorer.desktop  serviceviewer.cpp  serviceviewer.h  serviceviewer.ui  titlecombobox.h
globalthemeexplorer/: CMakeLists.txt  Messages.sh  org.kde.globalthemeexplorer.desktop
globalthemeexplorer/package/: metadata.desktop
globalthemeexplorer/src/: CMakeLists.txt  globalthememodel.cpp  globalthememodel.h  main.cpp  resources.qrc
iconexplorer/autotests/: CMakeLists.txt
iconexplorer/src/: CMakeLists.txt  colorschemes.cpp  colorschemes.h  iconmodel.cpp  main.cpp  sortfiltermodel.cpp  sortfiltermodel.h  windowstate.cpp  windowstate.h
kqml/: CMakeLists.txt  Messages.sh  main.cpp  man-kqml.1.docbook
kqml/completions/: kqml.zsh
lookandfeelexplorer/: CMakeLists.txt  Messages.sh  lnflistmodel.cpp  lnflistmodel.h  lnflogic.cpp  lnflogic.h  main.cpp  org.kde.plasma.lookandfeelexplorer.desktop
lookandfeelexplorer/package/: metadata.desktop  metadata.json
lookandfeelexplorer/qml/: FormField.qml  Main.qml  MetadataEditor.qml
lookandfeelexplorer/src/: CMakeLists.txt  globaltheme.cpp  globaltheme.h  lnflistmodel.cpp  lnflistmodel.h  lnflogic.cpp  lnflogic.h  main.cpp
plasmate/: CHANGELOG  CMakeLists.txt  Messages.sh  dockwidgetshandler.cpp  dockwidgetshandler.h  main.cpp  mainwindow.cpp  mainwindow.h  packagehandler.cpp  packagehandler.h  packagemodel.cpp  packagemodel.h  plasmate.desktop  plasmateui.rc  projecthandler.cpp  projecthandler.h  sidebar.cpp  sidebar.h  sidebardelegate.cpp  sidebardelegate.h  sidebaritem.cpp  sidebartablewidget.cpp  sidebartablewidget.h  startpage.cpp  startpage.h  startpage.ui
plasmate/app/: CMakeLists.txt  main.cpp  plasmate.desktop  plasmate.knsrc  plasmateapp.cpp  plasmateapp.h  plasmateextention.cpp  plasmateextention.h  plasmateui.rc
plasmate/docbrowser/: docbrowser.cpp  docbrowser.h
plasmate/editors/: CMakeLists.txt  editpage.cpp  editpage.h
plasmate/icons/: CMakeLists.txt
plasmate/konsole/: konsolepreviewer.cpp  konsolepreviewer.h
plasmate/modeltest/: dynamictreemodel.cpp  dynamictreemodel.h  modeltest.cpp  modeltest.h
plasmate/noteseditor/: noteseditor.cpp  noteseditor.h
plasmate/packagehandler/: packagehandler.cpp  packagehandler.h  plasmoidhandler.cpp  plasmoidhandler.h  themehandler.cpp  themehandler.h
plasmate/plugins/: CMakeLists.txt
plasmate/previewer/: previewer.cpp  previewer.h
plasmate/projectmanager/: projectmanager.cpp  projectmanager.h
plasmate/publisher/: publisher.cpp  publisher.h  publisher.ui  signingdialog.cpp  signingwidget.cpp  signingwidget.h
plasmate/savesystem/: branchdialog.cpp  branchdialog.h  commitdialog.h  (+12 more)
plasmoidviewer/: CMakeLists.txt  Messages.sh  fullview.cpp  fullview.h  main.cpp  man-plasmoidviewer.1.docbook  org.kde.plasmoidviewer.appdata.xml  org.kde.plasmoidviewer.desktop  view.cpp  view.h
previewer/: CMakeLists.txt  overlaytoolbox.cpp  overlaytoolbox.h  plasma-containment-studiopreviewer.desktop  previewcontainment.cpp  previewcontainment.h  previewer.cpp  previewer.h
remote-widgets-browser/: CMakeLists.txt  Messages.sh  main.cpp  main.qml  plasmafiltermodel.cpp  plasmafiltermodel.h
savesystem/: CMakeLists.txt  author.cpp  author.h  branchdialog.cpp  branchdialog.h  changeset.cpp  changeset.h  commit.cpp  commit.h  commit_p.h  commitdialog.cpp  commitdialog.h  dvcsjob.cpp  dvcsjob.h  file.cpp  file.h  gitrunner.cpp  gitrunner.h  hunk.cpp  hunk.h  logger.cpp  logger.h  logger_p.h  savesystem.cpp  savesystem.h  tabledelegate.cpp  tabledelegate.h  tablewidget.cpp  tablewidget.h  timeline.cpp  timeline.h  timelinedelegate.cpp  timelinedelegate.h  timelineitem.cpp  timelineitem.h  timelinelistwidget.cpp  timelinelistwidget.h  timelineprivatestorage.cpp  timelineprivatestorage.h  update-vng-CMakeLists.rb
src/: CMakeLists.txt  iconmodel.cpp  iconmodel.h  main.cpp
templates/: CMakeLists.txt  cmakelists  cmakelistsKWinDecoration  cmakelistsKWinScript  cmakelistsWindowSwitcher  mainDataEngine.py  mainDataEngine.rb  mainKWinScript.js  mainPlasmoid.js  mainPlasmoid.py  mainPlasmoid.qml  mainPlasmoid.rb  mainRunner.py
test-kpart/: CMakeLists.txt  kparttut1ui.rc  main.cpp  mainwindow.cpp  mainwindow.h
themeexplorer/: CMakeLists.txt  Messages.sh
(+1042 files in other folders)
