add_definitions(-DTRANSLATION_DOMAIN=\"org.kde.plasma.lookandfeelexplorer\")

add_subdirectory(src)

#kpackage_install_package(package org.kde.plasma.lookandfeelexplorer genericqml)

#install(FILES package/metadata.desktop DESTINATION ${KDE_INSTALL_APPDIR} RENAME org.kde.plasma.lookandfeelexplorer.desktop)

